--- a/sass/style.scss
+++ b/sass/style.scss
@@ -173,8 +173,8 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 
-#fh5co-header,
-.fh5co-cover {
+#ra-header,
+.ra-cover {
 	background-color: transparent;
 	background-size: cover;
 	background-attachment: fixed;
@@ -280,7 +280,7 @@ h1, h2, h3, h4, h5, h6, figure {
 			// border: 1px solid rgba($brand-white,1);
 			@include border-radius(50%);
 		}
-		.fh5co-social-icons {
+		.ra-social-icons {
 			li {
 				a {
 					color: $brand-white;
@@ -294,7 +294,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 
-#fh5co-features {
+#ra-features {
 	background: $brand-primary;
 	h2 {
 		color: $brand-white;
@@ -347,32 +347,32 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 
-#fh5co-about,
-#fh5co-resume,
-#fh5co-skills,
-#fh5co-started,
-#fh5co-work,
-#fh5co-blog,
-#fh5co-pricing,
-#fh5co-contact{
+#ra-about,
+#ra-resume,
+#ra-skills,
+#ra-started,
+#ra-work,
+#ra-blog,
+#ra-pricing,
+#ra-contact{
 	padding: 7em 0;
 	clear: both;
 	@media screen and (max-width: $screen-sm) {
 		padding: 3em 0;
 	}
 }
-#fh5co-started{
+#ra-started{
 	border-bottom: none;
 }
 
-.fh5co-bg-color{
+.ra-bg-color{
 	// background: #233142;
 
 }
-.fh5co-bg-dark{
+.ra-bg-dark{
 	background: $brand-bg-dark;
 	background: $brand-primary;
-	.fh5co-heading{
+	.ra-heading{
 		h2{
 			color: $brand-white !important;
 		}
@@ -411,7 +411,7 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 }
 
-.fh5co-social-icons {
+.ra-social-icons {
 	margin: 0;
 	padding: 0;
 	li {
@@ -431,8 +431,8 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 }
 
-#fh5co-about{
-	.fh5co-social-icons {
+#ra-about{
+	.ra-social-icons {
 		margin: 0;
 		padding: 0;
 		li {
@@ -457,9 +457,9 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 
-.fh5co-heading {
+.ra-heading {
 	margin-bottom: 5em;
-	&.fh5co-heading-sm {
+	&.ra-heading-sm {
 		margin-bottom: 2em;
 	}
 	h2 {
@@ -807,14 +807,14 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 }
 
-#fh5co-started {
+#ra-started {
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
 	position: relative;
 	float: left;
 	width: 100%;
-	.fh5co-heading {
+	.ra-heading {
 		margin-bottom: 0;
 		h2 {
 			color: $brand-white;
@@ -842,7 +842,7 @@ h1, h2, h3, h4, h5, h6, figure {
 //PRICING
 
 // BLOG
-.fh5co-blog{
+.ra-blog{
 	width: 100%;
 	float: left;
 	margin-bottom: 40px;
@@ -932,7 +932,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 
-#fh5co-consult{
+#ra-consult{
 	@include flex();
 	@include flexwrap();
 	width: 100%;
@@ -965,7 +965,7 @@ h1, h2, h3, h4, h5, h6, figure {
 		}
 	}
 }
-.fh5co-video {
+.ra-video {
 	overflow: hidden;
 	@media screen and (max-width: $screen-md){
 		height: 450px;
@@ -982,7 +982,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 
-#fh5co-footer {
+#ra-footer {
 	padding: 50px 0;
 	float: left;
 	width: 100%;
@@ -1264,7 +1264,7 @@ input[type="text"] {
    margin: 0px !important;
 }
 
-.fh5co-loader {
+.ra-loader {
 	position: fixed;
 	left: 0px;
 	top: 0px;
