--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,7 +16,7 @@ $brand-darker: #444;
 $brand-gray: #ccc;
 $brand-lighter: #e9e9e9;
 $brand-body-color: #818892;
-$brand-selection-color: #f9f6f0;
+$brand-selection-color: #bf00ff;
 $brand-overlay-color: #4c4a8a;
 $brand-bg-color: $brand-white;
 
