--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,7 @@ $grid-gutter-width: 40px !default;
 $border-radius-base:  4px !default;
 $padding-base-vertical: 14px !default;
 
-$brand-primary: #bf00ff !default;
+$brand-primary: #FF9000 !default;
 
 $brand-white: #fff;
 $brand-black: #000;
@@ -16,7 +16,7 @@ $brand-darker: #444;
 $brand-gray: #ccc;
 $brand-lighter: #e9e9e9;
 $brand-body-color: #818892;
-$brand-selection-color: #bf00ff;
+$brand-selection-color: #f9f6f0;
 $brand-overlay-color: #4c4a8a;
 $brand-bg-color: $brand-white;
 
