--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
-  color: #1c1b1c;
+  color: #2e2a2e;
   background: #fff;
 }
 
