--- a/css/style.css
+++ b/css/style.css
@@ -980,7 +980,7 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 50px 0;
   float: left;
   width: 100%;
-  border-top: 1px solid #707070;
+  border-top: 1px solid #cfcfcf;
 }
 #ra-footer p:last-child {
   margin-bottom: 0;
